--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -527,9 +527,11 @@ header {
         margin-right: 7px;
         width: 93px;
         img {
+            left: 50%;
             position: relative;
-            top: -10px;
-            width: 100%;    
+            top: 50%;
+            transform: translateX(-50%) translateY(-50%); 
+            width: 60%;
         }
     }
     .temperature {
