--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -457,7 +457,7 @@ header {
 #total-membership-goals {
     .goal {
         float: left;
-        margin-top: 20px;
+        margin: 30px 0 40px 0;
         text-transform: uppercase;
     }
     .goalAmount {
@@ -466,7 +466,7 @@ header {
     }
     .goalStatus {
         float: left;
-        margin-top: 20px;
+        margin: 30px 0 40px 0;
         text-transform: uppercase;
     }
     .goalStatusText {
