--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -590,8 +590,25 @@ header {
         right: 7px;
         top: 7px;
         .plus-sign-button {
+            cursor: pointer;
             height: 8px;
             width: 8px;
+        }
+    }
+    .popover {
+        white-space: nowrap;
+        .popover-content {
+            padding: 5px 10px;
+            a {
+                border-right: 1px solid @lightgrey;
+                margin-right: 10px;
+                padding-right: 10px;
+            }
+            a:last-child {
+                border-right: none;
+                margin-right: 0;
+                padding-right: 0;
+            }
         }
     }
 }
