Filter updates and bar meter progress.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -536,6 +536,13 @@ header {
     position: relative;
     top: 20px;
     width: 100%;
+    div {
+        border-left: 1px solid #000;
+        display: inline-block;
+        float: left;
+        margin: 26px 10px 0 0;
+        padding: 5px 0 0 3px;
+    }
 }
 .weather-bar {
     background-color: @lightblue;
