--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -485,7 +485,7 @@ header {
     color: @orange;
 }
 .dial {
-    margin-right: 10px;
+    margin-right: 5px;
     position: relative;
     .channel-info {
         position: absolute;
@@ -556,7 +556,7 @@ header {
         background-color: @darkgrey;
         border-radius: 3px;
         color: @white;
-        left: 50%;
+        left: 0;
         padding: 5px 10px;
         position: absolute;
         top: -34px;
@@ -881,10 +881,11 @@ LG = Large devices Desktops (≥1200px)
 }
 
 #div1, #div2, #div3, #div4, #div5, #div6, #div7 {
-    width: 110px;
-    height: 110px;
     box-sizing: border-box;
     float: left;
+    height: 115px;
+    top: 50px;
+    width: 115px;
 }
 
 #div1 .arc {
