Animations for stat arrows and weather icon.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -342,6 +342,7 @@ header {
         .down {
             margin: 0 5px 0 0;
             opacity: 0.5;
+            position: relative;
             transform: rotate(180deg);
             path {
                 fill: @white;
@@ -350,6 +351,7 @@ header {
         .up {
             margin: 0 5px 0 0;
             opacity: 0.5;
+            position: relative;
             path {
                 fill: @white;
             }
