Member stats frequency, recency, and total pulling from API.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -686,6 +686,9 @@ header {
         position: relative;
         top: -7px;
     }
+    .change:after {
+        content: '%';
+    }
 }
 #members-expired {
     .stat,
@@ -704,6 +707,9 @@ header {
         font-size: 50%;
         position: relative;
         top: -7px;
+    }
+    .change:after {
+        content: '%';
     }
 }
 #members-frequency {
@@ -768,6 +774,9 @@ header {
     .stat:after {
         content: 'k';
         font-size: 50%;
+    }
+    .change:after {
+        content: 'k';
     }
 }
 #members-velocity {
