Scrollable earned revenue details.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -423,6 +423,9 @@ header {
 
     }
 }
+#earned-revenue {
+    overflow: scroll;
+}
 .arrow-connector-right:after {
     border: solid transparent;
     border-color: rgba(21, 45, 65, 0);
