Added note icon as SVG ReactJS component and temp fixed filter overlaps.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -391,6 +391,7 @@ header {
         border: none;
         border-radius: 0;
         box-shadow: none;
+        padding-right: 30px;
     }
 }
 /******************************************************/
@@ -419,6 +420,7 @@ header {
         border-radius: 0;
         box-shadow: none;
         float: right;
+        padding-right: 20px;
         transition: none;
         width: 180px;
 
