--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -392,6 +392,7 @@ header {
         border: none;
         border-radius: 0;
         box-shadow: none;
+        font-size: 100%;
         padding-right: 30px;
     }
 }
@@ -421,6 +422,7 @@ header {
         border-radius: 0;
         box-shadow: none;
         float: right;
+        font-size: 100%;
         padding-right: 20px;
         transition: none;
         width: 180px;
@@ -1011,7 +1013,7 @@ header {
         content: '%';
     }
 }
-#members-expired {
+#members-captured {
     .stat,
     .change {
         color: @darkpurple1;
@@ -1049,7 +1051,8 @@ header {
         color: @mediumgrey;
         content: '# of visits per year';
         display: block;
-        font-size: 80%;
+        font-size: 70%;
+        padding-top: 3px;
         text-transform: initial;
     }
 }
@@ -1067,9 +1070,10 @@ header {
     }
     .label:after {
         color: @mediumgrey;
-        content: 'Time since last visit (months)';
+        content: 'Time since last visit (days)';
         display: block;
-        font-size: 80%;
+        font-size: 70%;
+        padding-top: 3px;
         text-transform: initial;
     }
 }
@@ -1089,7 +1093,8 @@ header {
         color: @mediumgrey;
         content: 'Total #';
         display: block;
-        font-size: 80%;
+        font-size: 70%;
+        padding-top: 3px;
         text-transform: initial;
     }
     .stat:after {
@@ -1100,7 +1105,7 @@ header {
         content: 'k';
     }
 }
-#members-velocity {
+#members-percap {
     .stat,
     .change {
         color: @darkgrey;
@@ -1111,13 +1116,6 @@ header {
         path {
             fill: @darkgrey;
         }
-    }
-    .label:after {
-        color: @mediumgrey;
-        content: 'Time to renewal (months)';
-        display: block;
-        font-size: 80%;
-        text-transform: initial;
     }
 }
 /************************/
