--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -552,9 +552,6 @@ header {
 }
 .bar-meter {
     background: linear-gradient(to right, Red, Orange, Yellow, YellowGreen);
-        background: -webkit-linear-gradient(left, red, green);
-        background: -o-linear-gradient(right, red, green);
-        background: -moz-linear-gradient(right, red, green);
     border: 1px solid @mediumgrey;
     border-radius: 3px;
     height: 27px;
@@ -573,7 +570,7 @@ header {
         top: 26px;
         width: 100%;
         .bar-meter-segment {
-            border-left: 1px solid #000;
+            border-left: 1px solid @mediumgrey;
             padding: 5px 0 0 3px;
         }
     }
@@ -585,6 +582,7 @@ header {
         padding: 5px 10px;
         position: absolute;
         top: -34px;
+        transform: translateX(-50%);
     }
     .bar-meter-marker:after {
         border: solid transparent;
