Sales goals progress.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -509,6 +509,9 @@ header {
 .on-track {
     color: @orange;
 }
+.dial-wrapper {
+    margin: 0 auto;
+}
 .dial {
     margin-right: 5px;
     position: relative;
