Member goals bar meter and menu hover color.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -237,7 +237,7 @@ header {
                 }
             }
             a:hover {
-                color: @gold;
+                color: @mediumgrey;
                 text-decoration: none;
             }
         }
