Data in dials, but still need calculations and filters.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -839,6 +839,7 @@ header {
     top: 30px;
     .bar-graph-slider-control {
         background-color: @mediumgrey;
+        cursor: pointer;
         height: 15px;
         left: 50%;
         text-align: center;
