Starter marks for dials.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -1267,39 +1267,74 @@ LG = Large devices Desktops (≥1200px)
     width: 115px;
 }
 
-#div1 .arc {
-    stroke-weight: 0.1;
-    fill: @cobalt;
+#div1 {
+    .arc {
+        stroke-weight: 0.1;
+        fill: @cobalt;
+    }
+    line {
+        stroke: @cobalt;
+    }
 }
 
-#div2 .arc2 {
-    stroke-weight: 0.1;
-    fill: @teal;
+#div2 {
+    .arc {
+        stroke-weight: 0.1;
+        fill: @teal;
+    }
+    line {
+        stroke: @teal;
+    }
 }
 
-#div3 .arc {
-    stroke-weight: 0.1;
-    fill: @aqua;
+#div3 {
+    .arc {
+        stroke-weight: 0.1;
+        fill: @aqua;
+    }
+    line {
+        stroke: @aqua;
+    }
 }
 
-#div4 .arc {
-    stroke-weight: 0.1;
-    fill: @gold;
+#div4 {
+    .arc {
+        stroke-weight: 0.1;
+        fill: @gold;
+    }
+    line {
+        stroke: @gold;
+    }
 }
 
-#div5 .arc {
-    stroke-weight: 0.1;
-    fill: @mediumpurple;
+#div5 {
+    .arc {
+        stroke-weight: 0.1;
+        fill: @mediumpurple;
+    }
+    line {
+        stroke: @mediumpurple;
+    }
 }
 
-#div6 .arc {
-    stroke-weight: 0.1;
-    fill: @lightpurple;
+#div6 {
+    .arc {
+        stroke-weight: 0.1;
+        fill: @lightpurple;
+    }
+    line {
+        stroke: @lightpurple;
+    }
 }
 
-#div7 .arc {
-    stroke-weight: 0.1;
-    fill: @darkpurple2;
+#div7 {
+    .arc {
+        stroke-weight: 0.1;
+        fill: @darkpurple2;
+    }
+    line {
+        stroke: @darkpurple2;
+    }
 }
 
 
