Storing code progress for dial popovers.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -516,6 +516,9 @@ header {
 .dial-wrapper {
     display: inline-block;
     margin: 0 auto;
+    circle {
+        cursor: pointer;
+    }
 }
 .dial {
     margin-right: 5px;
