Per cap labeling.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -726,25 +726,25 @@ header {
     z-index: 1;
 }
 .bar-line-1:before {
-    content: '20 --';
+    content: attr(data-content);
     left: -25px;
     position: absolute;
     top: -9.5px;
 }
 .bar-line-2:before {
-    content: '40 --';
+    content: attr(data-content);
     left: -25px;
     position: absolute;
     top: -9.5px;
 }
 .bar-line-3:before {
-    content: '60 --';
+    content: attr(data-content);
     left: -26px;
     position: absolute;
     top: -9.5px;
 }
 .bar-line-4:before {
-    content: '80 --';
+    content: attr(data-content);
     left: -26px;
     position: absolute;
     top: -9.5px;
